Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-124254

Names can start with a non-letter char in Address Book example

XMLWordPrintable

    • Windows
    • c3fa43513 (dev), 37d831763 (6.7), 58d787e00 (tqtc/lts-6.5), 415697adf (tqtc/lts-6.2)

      In the Address Book example, when you add a new entry that has a name that starts with a non-letter char, it will not show up in any of the categories, but it will still exist. The beginning page that says "There are currently no contacts in your address book" will disappear, although no entries can be found. These entries cannot be deleted.

       

      Expected behavior:

      Names should only be allowed to start with letters.

        For Gerrit Dashboard: QTBUG-124254
        # Subject Branch Project Status CR V

            chrisrl Chris Lerner (Inactive)
            chrisrl Chris Lerner (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes